# tripad

./: LICENSE  README.md  pyproject.toml
tripad/: __about__.py  __main__.py  _shared.py  kasacontrolitem.py  networkconfigitem.py  tripad.kv
tripad/tabs/: kasa.py  lxi.py  network.py
