[tool.poetry]
name = "tripad"
version = "0.2.0"
license = "GPL v3.0"
description = "Touchscreen Laptop/Tablet Control Plane"
authors = ["Ken Levasseur <klevasseuriv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nmcli = "^0.6.1"
PyQt5 = "5.15.4"
python-vxi11 = "^0.9"
python-kasa = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pylint = "^2.10.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
